--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ certifi==2019.6.16
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.2.2
+django-heroku==0.3.1
 gunicorn==20.0.4
 idna==2.8
 isort==4.3.20
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 pkg-resources==0.0.0
+psycopg2==2.8.4
 psycopg2-binary==2.8.4
 pylint==2.3.1
 pytz==2019.1
