--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-airtable==0.3.1
-airtable-python-wrapper==0.12.0
-astroid==2.2.5
-certifi==2019.6.16
-chardet==3.0.4
-dj-database-url==0.5.0
-Django==2.2.2
-django-heroku==0.3.1
-gunicorn==20.0.4
-idna==2.8
-isort==4.3.20
-lazy-object-proxy==1.4.1
-mccabe==0.6.1
-psycopg2==2.8.4
-psycopg2-binary==2.8.4
-pylint==2.3.1
-pytz==2019.1
-requests==2.22.0
-six==1.12.0
-sqlparse==0.3.0
-typed-ast==1.4.0
-urllib3==1.25.3
-whitenoise==4.1.4
-wrapt==1.11.2
+# airtable==0.3.1
+# airtable-python-wrapper==0.12.0
+# astroid==2.2.5
+# certifi==2019.6.16
+# chardet==3.0.4
+# dj-database-url==0.5.0
+# Django==2.2.2
+# django-heroku==0.3.1
+# gunicorn==20.0.4
+# idna==2.8
+# isort==4.3.20
+# lazy-object-proxy==1.4.1
+# mccabe==0.6.1
+# psycopg2==2.8.4
+# psycopg2-binary==2.8.4
+# pylint==2.3.1
+# pytz==2019.1888888
+# requests==2.22.0
+# six==1.12.0
+# sqlparse==0.3.0
+# typed-ast==1.4.0
+# urllib3==1.25.3
+# whitenoise==4.1.4
+# wrapt==1.11.2
