--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.1.4
 django-heroku==0.3.1
+gunicorn==20.0.4
 idna==2.10
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
